fix responsiveness of loading on mobile

--- a/src/components/loading/Loading.css
+++ b/src/components/loading/Loading.css
@@ -1,12 +1,17 @@
 
 .svg__con {
-  height: 100vh;
+  position: absolute;
   display: flex;
   flex-direction: column;
-  justify-content:center;
+  justify-content: center;
   align-items: center;
-  gap: 1rem;
+  text-align: center;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   background-color: var(--clr-dark);
+  gap: 1rem;
   z-index: 99999;
 }
 
@@ -81,7 +86,16 @@ svg {
 
 
 /* xs */
-/* @media (min-width: 475px) {} */
+@media (min-width: 475px) {
+  #liquid-loading {
+    height: 7.5rem;
+    width: 7.5rem;
+  }
+
+  .loading__text {
+    font-size: var(--size-base);
+  }
+}
 
 /* sm */
 /* @media (min-width: 640px) {} */
@@ -95,7 +109,7 @@ svg {
   }
 
   .loading__text {
-    font-size: var(--size-base);
+    font-size: var(--size-lg);
   }
 }
 
