--- a/src/styles/Utils.css
+++ b/src/styles/Utils.css
@@ -22,7 +22,7 @@
   margin-right: auto;
   padding-left: 2rem;
   padding-right: 2rem;
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
 
 .section {
